--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 <body>
     <input type="file" id="imageUpload" accept="image/*">
+    <img id="imagePreview" alt="Image Preview" style="max-width: 100%; max-height: 300px; margin-top: 10px;">
     <canvas id="canvas" style="display: none;"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/opencv-wasm@4.5.3/build/opencv.js"></script>
     <script>
         async function runDetectionModel(imageData) {
-            const session = await ort.InferenceSession.create('https://github.com/ro7m/test/releases/download/v1.0.0/rep_fast_base.onnx');
+            const session = await ort.InferenceSession.create('https://cors-anywhere.herokuapp.com/https://github.com/ro7m/test/releases/download/v1.0.0/rep_fast_base.onnx');
             const image = cv.imdecode(imageData);
             const inputTensor = preprocessImageForDetection(image); // Preprocess the image as required by the detection model
             const feeds = { 'input': inputTensor };
@@ -21,7 +22,7 @@
         }
 
         async function runRecognitionModel(croppedImages) {
-            const session = await ort.InferenceSession.create('https://github.com/ro7m/test/releases/download/v1.0.0/parseq_dynamic.onnx');
+            const session = await ort.InferenceSession.create('https://cors-anywhere.herokuapp.com/https://github.com/ro7m/test/releases/download/v1.0.0/parseq_dynamic.onnx');
             const results = [];
             for (const croppedImage of croppedImages) {
                 const inputTensor = preprocessImageForRecognition(croppedImage); // Preprocess the cropped image as required by the recognition model
@@ -70,6 +71,10 @@
                 console.log(recognizedTexts);
             };
             reader.readAsArrayBuffer(file);
+
+            // Set the image preview
+            const imgPreview = document.getElementById('imagePreview');
+            imgPreview.src = URL.createObjectURL(file);
         }
 
         document.getElementById('imageUpload').addEventListener('change', (event) => {
