--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/opencv-wasm@4.5.3/build/opencv.js"></script>
     <script>
         async function runDetectionModel(imageData) {
-            const session = await ort.InferenceSession.create('https://cors-anywhere.herokuapp.com/https://github.com/ro7m/test/releases/download/v1.0.0/rep_fast_base.onnx');
+            const session = await ort.InferenceSession.create('https://allorigins.me/get?url=https:%3A%2F%2F%github.com%2F%ro7m%2F%test%2F%releases%2F%download%2F%v1.0.0%2F%rep_fast_base.onnx');
             const image = cv.imdecode(imageData);
             const inputTensor = preprocessImageForDetection(image); // Preprocess the image as required by the detection model
             const feeds = { 'input': inputTensor };
@@ -22,7 +22,7 @@
         }
 
         async function runRecognitionModel(croppedImages) {
-            const session = await ort.InferenceSession.create('https://cors-anywhere.herokuapp.com/https://github.com/ro7m/test/releases/download/v1.0.0/parseq_dynamic.onnx');
+            const session = await ort.InferenceSession.create('https://allorigins.me/get?url=https:%3A%2F%2F%github.com%2F%ro7m%2F%test%2F%releases%2F%download%2F%v1.0.0%2F%parseq_dynamic.onnx');
             const results = [];
             for (const croppedImage of croppedImages) {
                 const inputTensor = preprocessImageForRecognition(croppedImage); // Preprocess the cropped image as required by the recognition model
