--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
 
         async function runDetectionModel(imageData) {
-            const session = await ort.InferenceSession.create('https://huggingface.co/Felix92/onnxtr-fast-base/blob/main/model.onnx');
+            const session = await ort.InferenceSession.create('models/rep_fast_base.onnx');
             const image = cv.imdecode(imageData);
             const inputTensor = preprocessImageForDetection(image); // Preprocess the image as required by the detection model
             const feeds = { 'input': inputTensor };
@@ -54,7 +54,7 @@
         }
 
         async function runRecognitionModel(croppedImages) {
-            const session = await ort.InferenceSession.create('https://huggingface.co/Felix92/onnxtr-parseq/blob/main/model.onnx');
+            const session = await ort.InferenceSession.create('models/parseq_dynamic.onnx');
             const results = [];
             for (const croppedImage of croppedImages) {
                 const inputTensor = preprocessImageForRecognition(croppedImage); // Preprocess the cropped image as required by the recognition model
