--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="timer">00:00:00</div>
     <canvas id="canvas" style="display: none;"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/opencv-wasm@4.5.3/build/opencv.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/opencv-wasm@4.3.0-10/opencv.js"></script>
     <script>
         let startTime;
         let timerInterval;
