--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           const script = document.createElement("script")
           script.type = "text/javascript"
           script.async = "async"
-          script.src = "js/opencv.js"
+          script.src = "https://cdn.jsdelivr.net/npm/opencv4nodejs@5.6.0/lib/opencv4nodejs.min.js"
           document.body.appendChild(script)
           script.onload = () => {
             console.log("OpenCV.js is loaded.")
