--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             },
             _main: () => {
               console.log('OpenCV.js is ready.')
-              cv = window.cv
+              //cv = window.cv
             }
           }
           onOpenCvReady();  
