--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
             return
           }
         
-          console.log("loading OpenCv.js")
-          const script = document.createElement("script")
-          script.type = "text/javascript"
-          script.async = "async"
-          script.src = "https://cdn.jsdelivr.net/npm/opencv4nodejs@5.6.0/lib/opencv4nodejs.min.js"
-          document.body.appendChild(script)
-          script.onload = () => {
-            console.log("OpenCV.js is loaded.")
-          }
+          // console.log("loading OpenCv.js")
+          // const script = document.createElement("script")
+          // script.type = "text/javascript"
+          // script.async = "async"
+          // script.src = "https://cdn.jsdelivr.net/npm/opencv4nodejs@5.6.0/lib/opencv4nodejs.min.js"
+          // document.body.appendChild(script)
+          // script.onload = () => {
+          //   console.log("OpenCV.js is loaded.")
+          // }
         
           window.Module = {
             wasmBinaryFile: `js/opencv_js.wasm`, // for wasm mode
