--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             try {
                 const session = await ort.InferenceSession.create('models/rep_fast_base.onnx');
                 const image = cv.imdecode(imageData, cv.IMREAD_COLOR);
-                const inputTensor = preprocessImageForDetection(image); // Preprocess the image as required by the detection model
+                const inputTensor = preprocessImageForDetection(image);
                 const feeds = { 'input': inputTensor };
                 const results = await session.run(feeds);
-                return postprocessDetectionResults(results); // Postprocess the results to get bounding boxes
+                return postprocessDetectionResults(results);
             } catch (error) {
                 console.error('Error running detection model:', error);
                 return [];
@@ -64,10 +64,10 @@
                 const session = await ort.InferenceSession.create('models/parseq_dynamic.onnx');
                 const results = [];
                 for (const croppedImage of croppedImages) {
-                    const inputTensor = preprocessImageForRecognition(croppedImage); // Preprocess the cropped image as required by the recognition model
+                    const inputTensor = preprocessImageForRecognition(croppedImage);
                     const feeds = { 'input': inputTensor };
                     const result = await session.run(feeds);
-                    results.push(postprocessRecognitionResult(result)); // Postprocess the result to get recognized text
+                    results.push(postprocessRecognitionResult(result));
                 }
                 return results;
             } catch (error) {
@@ -82,7 +82,7 @@
             const normalizedImage = new cv.Mat();
             resizedImage.convertTo(normalizedImage, cv.CV_32F, 1.0 / 255.0);
             const data = new Float32Array(normalizedImage.data32F);
-            return new ort.Tensor('float32', data, [1, 3, 1024, 1024]); // Convert to ONNX tensor
+            return new ort.Tensor('float32', data, [1, 3, 1024, 1024]);
         }
 
         function preprocessImageForRecognition(image) {
@@ -91,7 +91,7 @@
             const normalizedImage = new cv.Mat();
             resizedImage.convertTo(normalizedImage, cv.CV_32F, 1.0 / 255.0);
             const data = new Float32Array(normalizedImage.data32F);
-            return new ort.Tensor('float32', data, [1, 3, 32, 128]); // Convert to ONNX tensor
+            return new ort.Tensor('float32', data, [1, 3, 32, 128]);
         }
 
         function postprocessDetectionResults(results) {
@@ -112,9 +112,16 @@
         async function main(file) {
             const reader = new FileReader();
             reader.onload = async (event) => {
-                const imageData = new Uint8Array(event.target.result);
-                const boundingBoxes = await runDetectionModel(imageData);
-                const image = cv.imdecode(imageData, cv.IMREAD_COLOR);
+                const arrayBuffer = event.target.result;
+                const uint8Array = new Uint8Array(arrayBuffer);
+                const image = cv.imdecode(uint8Array, cv.IMREAD_COLOR);
+
+                if (image.empty()) {
+                    console.error('Failed to decode image.');
+                    return;
+                }
+
+                const boundingBoxes = await runDetectionModel(uint8Array);
                 const croppedImages = boundingBoxes.map(box => {
                     const roi = image.roi(new cv.Rect(box.x, box.y, box.width, box.height));
                     const cropped = new cv.Mat();
@@ -127,8 +134,6 @@
                 alert(`OCR Results:\n${recognizedTexts.join('\n')}`);
             };
             reader.readAsArrayBuffer(file);
-
-            // Set the image preview
             const imgPreview = document.getElementById('imagePreview');
             imgPreview.src = URL.createObjectURL(file);
         }
@@ -152,7 +157,6 @@
             }
         });
 
-        // Initialize OpenCV
         function onOpenCvReady() {
             console.log('OpenCV.js is ready');
         }
