--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     console.log('Image successfully decoded after conversion.');
                     
                 });
-                return;
+                //return;
             }
 
             //console.log('Image successfully decoded.');
