--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                 <button id="discardButton">Discard</button>
             </div>
         </div>
+        <div id="loadingMessage" class="loading-message"></div>
         <div id="result" class="result"></div>
         <div id="apiResponse" class="api-response"></div>
+        
     </div>
     <script src="app.js"></script>
 </body>
