--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
         <div id="apiResponse" class="api-response"></div>
     </div>
     <script src="app.js"></script>
+     <script src="lib/opencv.js"></script>
 </body>
 </html>
